--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "anhskohbo/no-captcha": "^3.0",
         "bugsnag/bugsnag-laravel": "^2.15",
         "jenssegers/date": "^3.5",
         "doctrine/dbal": "^2.9",
