--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,16 @@
         "php": "^7.1.3",
         "anhskohbo/no-captcha": "^3.0",
         "bugsnag/bugsnag-laravel": "^2.15",
-        "jenssegers/date": "^3.5",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "jenssegers/date": "^3.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
         "laraveldaily/laravel-charts": "^0.1.0",
         "nesbot/carbon": "^2.23",
+        "realrashid/sweet-alert": "^2.0",
         "spatie/laravel-medialibrary": "^7.0.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
