--- a/.env_example
+++ b/.env_example
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NOCAPTCHA_SITEKEY=6Ldm7r0UAAAAAAHf-DOB5mvQYkTz-w6tcrlx4lt_
+NOCAPTCHA_SECRET=6Ldm7r0UAAAAAMHTRyKt_gL711usyUv0C2-oMaFo
